--- a/Sahabi/Sahabi.csproj
+++ b/Sahabi/Sahabi.csproj
@@ -14,17 +14,17 @@
 		<!-- For example: <RuntimeIdentifiers>maccatalyst-x64;maccatalyst-arm64</RuntimeIdentifiers> -->
 
 		<OutputType>Exe</OutputType>
-		<RootNamespace>IslamPartner</RootNamespace>
+		<RootNamespace>Sahabi</RootNamespace>
 		<UseMaui>true</UseMaui>
 		<SingleProject>true</SingleProject>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 
 		<!-- Display name -->
-		<ApplicationTitle>IslamPartner</ApplicationTitle>
+		<ApplicationTitle>Sahabi</ApplicationTitle>
 
 		<!-- App Identifier -->
-		<ApplicationId>com.companyname.islampartner</ApplicationId>
+		<ApplicationId>com.companyname.sahabi</ApplicationId>
 
 		<!-- Versions -->
 		<ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
